Update from January 26, 2023

--- a/69881-h/69881-h.htm
+++ b/69881-h/69881-h.htm
@@ -171,7 +171,7 @@ img {
 </head>
 
 <body>
-<p style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of Preservation of forests as a measure of public safety, by L. Beata-Neves</p>
+<p style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of Preservation of forests as a measure of public safety, by L. Baeta-Neves</p>
 <div style='display:block; margin:1em 0'>
 This eBook is for the use of anyone anywhere in the United States and
 most other parts of the world at no cost and with almost no restrictions
@@ -184,7 +184,7 @@ country where you are located before using this eBook.
 
 <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Title: Preservation of forests as a measure of public safety</p>
 <p style='display:block; margin-left:2em; text-indent:0; margin-top:0; margin-bottom:1em;'>Address before the 17th National Irrigation Congress, Spokane, Wash., August, 1909</p>
-<p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Author: L. Beata-Neves</p>
+<p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Author: L. Baeta-Neves</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Release Date: January 26, 2023 [eBook #69881]</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: English</p>
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Donald Cummings and the Online Distributed Proofreading Team at https://www.pgdp.net (This file was produced from images generously made available by The Internet Archive)</p>
